--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 </head>
 <body>
     <div id="viewDiv"></div>
+    <button id="layer-list-btn" class="esri-icon-layer-list" type="button" title="Layer List"></button>
+    <button id="basemap-gallery-btn"class="esri-icon-basemap" type="button" title="Basemap Gallery"></button>
 </body>
 </html>
